@@ -82,17 +82,19 @@
   <title>PRIMITIVES:</title>
   <variablelist remap='TP'>
     <varlistentry>
-      <term><emphasis remap='B' role='bold'>-attr</emphasis> <emphasis remap='I'>attrib[=val]</emphasis></term>
+      <term><emphasis remap='B' role='bold'>-attr</emphasis> <emphasis remap='I'>attrib[&gt;/&lt;/=val]</emphasis></term>
       <listitem>
 	<para>
 	  Returns TRUE if the object has attribute
 	  <emphasis remap='I'>attrib</emphasis>. If a specific value is 
-	  also supplied for the attribute, TRUE is returned if the object 
-	  both has the attribute and the attribute is set to value
-	  <emphasis remap='I'>val.</emphasis>
-	  Both <emphasis remap='I'>attrib</emphasis> and
-	  <emphasis remap='I'>val</emphasis> are treated as patterns under 
-	  shell pattern matching rules.
+	  also supplied for the attribute with an equal condition, TRUE is returned if 
+	  the object both has the attribute and the attribute is set to value
+	  <emphasis remap='I'>val.</emphasis>  In the case of &gt;, &lt;, &gt;=, and &lt;=
+	  there are two possibilities - if <emphasis remap='I'>val</emphasis> is numerical
+	  a numerical comparison is performed, otherwise a string comparison is performed.
+	  Both <emphasis remap='I'>attrib</emphasis> and <emphasis remap='I'>val</emphasis> 
+	  are treated as patterns under shell pattern matching rules when a string comparison
+	  is performed, but in numerical mode only the attribute name is pattern matched.
 	</para>
       </listitem>
     </varlistentry>
